tester/testsuite/bad/bad045.jl
int main() { 
   int =;
   return 1;
}
